writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/postfix_if.c
int main(void) {
    int a = 0;

    
    if (a--)
        return 0;  
    else if (a--)  
        return 1;
    return 0;  

}